Added mp3 filepath search
Sound Repository now holds the Core Dictionary for data on all sound files. Added code for searching for mp3 files within a given directory, however currently defaults to directory of executable.

--- a/Soundboard/Soundboard/Soundboard.csproj
+++ b/Soundboard/Soundboard/Soundboard.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\SoundFile.cs" />
+    <Compile Include="Classes\SoundFileFactory.cs" />
+    <Compile Include="Classes\SoundRepository.cs" />
     <Compile Include="Soundboard.cs">
       <SubType>Form</SubType>
     </Compile>
