--- a/Soundboard/Soundboard/Soundboard.csproj
+++ b/Soundboard/Soundboard/Soundboard.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\RecordHelper.cs" />
     <Compile Include="Classes\SoundFile.cs" />
     <Compile Include="Classes\SoundFileFactory.cs" />
     <Compile Include="Classes\SoundRepository.cs" />
