--- a/Soundboard/Soundboard/Soundboard.csproj
+++ b/Soundboard/Soundboard/Soundboard.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Classes\SoundFile.cs" />
     <Compile Include="Classes\SoundFileFactory.cs" />
     <Compile Include="Classes\SoundRepository.cs" />
+    <Compile Include="Forms\Shortcut Manager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Shortcut Manager.Designer.cs">
+      <DependentUpon>Shortcut Manager.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ShortcutForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +75,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\Shortcut Manager.resx">
+      <DependentUpon>Shortcut Manager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ShortcutForm.resx">
       <DependentUpon>ShortcutForm.cs</DependentUpon>
     </EmbeddedResource>
