App.config added for base Shortcuts
Added Settings for the app.config to store some user defined keybinds. Input Helper loads these keybinds into the Base Shortcut Dictionary at startup

--- a/Soundboard/Soundboard/Properties/Settings.settings
+++ b/Soundboard/Soundboard/Properties/Settings.settings
@@ -1,7 +1,18 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Soundboard.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="StopKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)">S</Value>
+    </Setting>
+    <Setting Name="PlayKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)">P</Value>
+    </Setting>
+    <Setting Name="RecordKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Ctrl R</Value>
+    </Setting>
+    <Setting Name="PlaybackKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Ctrl P</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
