--- a/Soundboard/Soundboard/App.config
+++ b/Soundboard/Soundboard/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Soundboard.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <Soundboard.Properties.Settings>
+            <setting name="StopKey" serializeAs="String">
+                <value>S</value>
+            </setting>
+            <setting name="PlayKey" serializeAs="String">
+                <value>P</value>
+            </setting>
+            <setting name="RecordKey" serializeAs="String">
+                <value>Ctrl R</value>
+            </setting>
+            <setting name="PlaybackKey" serializeAs="String">
+                <value>Ctrl P</value>
+            </setting>
+        </Soundboard.Properties.Settings>
+    </userSettings>
 </configuration>
