--- a/Soundboard/Soundboard/Soundboard.csproj
+++ b/Soundboard/Soundboard/Soundboard.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\InputHelper.cs" />
+    <Compile Include="Classes\ListViewColumnSorter.cs" />
     <Compile Include="Classes\SEMediaPlayer.cs" />
     <Compile Include="Classes\RecordHelper.cs" />
     <Compile Include="Classes\SoundFile.cs" />
