--- a/Soundboard/Soundboard/Soundboard.csproj
+++ b/Soundboard/Soundboard/Soundboard.csproj
@@ -56,6 +56,12 @@
     <Compile Include="Classes\SoundFile.cs" />
     <Compile Include="Classes\SoundFileFactory.cs" />
     <Compile Include="Classes\SoundRepository.cs" />
+    <Compile Include="Forms\Keybind Manager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Keybind Manager.Designer.cs">
+      <DependentUpon>Keybind Manager.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Shortcut Manager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\Keybind Manager.resx">
+      <DependentUpon>Keybind Manager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Shortcut Manager.resx">
       <DependentUpon>Shortcut Manager.cs</DependentUpon>
     </EmbeddedResource>
