--- a/Soundboard/Soundboard/App.config
+++ b/Soundboard/Soundboard/App.config
@@ -22,6 +22,9 @@
             <setting name="PlaybackKey" serializeAs="String">
                 <value>Ctrl P</value>
             </setting>
+            <setting name="MuteKey" serializeAs="String">
+                <value>M</value>
+            </setting>
         </Soundboard.Properties.Settings>
     </userSettings>
 </configuration>
