--- a/Soundboard/Soundboard/Properties/Settings.settings
+++ b/Soundboard/Soundboard/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="PlaybackKey" Type="System.String" Scope="User">
       <Value Profile="(Default)">Ctrl P</Value>
     </Setting>
+    <Setting Name="MuteKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)">M</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
