--- a/Soundboard/Soundboard/App.config
+++ b/Soundboard/Soundboard/App.config
@@ -25,6 +25,9 @@
             <setting name="MuteKey" serializeAs="String">
                 <value>M</value>
             </setting>
+            <setting name="SaveKey" serializeAs="String">
+                <value>Ctrl S</value>
+            </setting>
         </Soundboard.Properties.Settings>
     </userSettings>
 </configuration>
